Fix history not showing on IOS

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ input,
   border-radius: 4px;
 }
 
-.history:not(:has(li)) {
+#history {
   display: none;
 }
 
